force-app/main/default/objects/Einstein_API_Settings__c/fields/Case_Origin_to_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Case_Origin_to_Stamp__c</fullName>
    <description>The Case Origin Details values for which Einstein predictions will be stamped on the front-end fields (other Cases will only have back-end fields stamped)</description>
    <inlineHelpText>The Case Origin Details values for which Einstein predictions will be stamped on the front-end fields (other Cases will only have back-end fields stamped)</inlineHelpText>
    <label>Case Origin to Stamp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>