force-app/main/default/objects/Einstein_API_Settings__c/fields/Einstein_Access_Token__c.field-meta.xml
<CustomField>
    <fullName>Einstein_Access_Token__c</fullName>
    <description>This is the OAuth2 Access Token to be sued to call the Einstein API. It is refreshed every 24 hours by a scheduled job.</description>
    <inlineHelpText>This is the OAuth2 Access Token to be sued to call the Einstein API. It is refreshed every 24 hours by a scheduled job.</inlineHelpText>
    <label>Einstein Access Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>