force-app/main/default/objects/Einstein_API_Settings__c/fields/Einstein_Base_URL__c.field-meta.xml
<CustomField>
    <fullName>Einstein_Base_URL__c</fullName>
    <description>This is the base url of the endpoint for the Einstein API</description>
    <inlineHelpText>This is the base url of the endpoint for the Einstein API</inlineHelpText>
    <label>Einstein Base URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>