force-app/main/default/objects/Einstein_API_Settings__c/fields/Einstein_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Einstein_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Einstein predictions are enabled</description>
    <inlineHelpText>Indicates if Einstein predictions are enabled</inlineHelpText>
    <label>Einstein Enabled</label>
    <type>Checkbox</type>
</CustomField>