force-app/main/default/objects/Einstein_API_Settings__c/fields/Einstein_Registration_Email__c.field-meta.xml
<CustomField>
    <fullName>Einstein_Registration_Email__c</fullName>
    <description>This is the email address used when signing up with Einstein. It is required to generate the access token.</description>
    <inlineHelpText>This is the email address used when signing up with Einstein. It is required to generate the access token.</inlineHelpText>
    <label>Einstein Registration Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>