force-app/main/default/objects/Einstein_API_Settings__c/fields/Issue_Model_Id__c.field-meta.xml
<CustomField>
    <fullName>Issue_Model_Id__c</fullName>
    <description>This is the Einstein Model Id for the Issue. We pass this to the Einstein API to make Issue predictions.</description>
    <inlineHelpText>This is the Einstein Model Id for the Issue. We pass this to the Einstein API to make Issue predictions.</inlineHelpText>
    <label>Issue Model Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>