force-app/main/default/objects/Einstein_API_Settings__c/fields/Location_Model_Id__c.field-meta.xml
<CustomField>
    <fullName>Location_Model_Id__c</fullName>
    <description>This is the Einstein Model Id for the Location. We pass this to the Einstein API to make Taxonomy Location predictions.</description>
    <inlineHelpText>This is the Einstein Model Id for the Location. We pass this to the Einstein API to make Taxonomy Location predictions.</inlineHelpText>
    <label>Location Model Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>