force-app/main/default/objects/Einstein_API_Settings__c/fields/Max_Records_per_Process__c.field-meta.xml
<CustomField>
    <fullName>Max_Records_per_Process__c</fullName>
    <description>This is the maximum amount of records that will be processed by Einstein in one transaction</description>
    <inlineHelpText>This is the maximum amount of records that will be processed by Einstein in one transaction</inlineHelpText>
    <label>Max Records per Process</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>