force-app/main/default/objects/Einstein_API_Settings__c/fields/Minimum_Probability_Level__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Probability_Level__c</fullName>
    <description>This is the minimum probability for an Einstein prediction that we will allow before stamping a Case with the predicted values</description>
    <inlineHelpText>This is the minimum probability for an Einstein prediction that we will allow before stamping a Case with the predicted values</inlineHelpText>
    <label>Minimum Probability Level</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>