force-app/main/default/objects/Einstein_API_Settings__c/fields/PEM_FileName__c.field-meta.xml
<CustomField>
    <fullName>PEM_FileName__c</fullName>
    <description>This is the name of the PEM file containing the key used to generate the access token.</description>
    <inlineHelpText>This is the name of the PEM file containing the key used to generate the access token.</inlineHelpText>
    <label>PEM FileName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>