force-app/main/default/objects/Einstein_API_Settings__c/fields/Support_Email__c.field-meta.xml
<CustomField>
    <fullName>Support_Email__c</fullName>
    <description>List of email addresses to receive error emails</description>
    <inlineHelpText>List of email addresses to receive error emails</inlineHelpText>
    <label>Support Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>