force-app/main/default/objects/Einstein_API_Settings__c/fields/Token_Expiration_Time__c.field-meta.xml
<CustomField>
    <fullName>Token_Expiration_Time__c</fullName>
    <description>The time in milliseconds before the token expires. A scheduled job will update the token every 24 hours so the expiration time will be set ~48 hours to ensure there is always a valid token.</description>
    <inlineHelpText>The time in milliseconds before the token expires. A scheduled job will update the token every 24 hours so the expiration time will be set ~48 hours to ensure there is always a valid token.</inlineHelpText>
    <label>Token Expiration Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>